<package format="2">
  <name>single_arm_v2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for single_arm_v2</p>
    <p>This package contains configuration data, 3D models and launch files
for single_arm_v2 robot</p>
  </description>
  <author>tw273414</author>
  <maintainer email="tw273414@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>